[tool.poetry]
name = "genai"
version = "0.1.0"
description = ""
authors = ["Gloria Macia <gloria.macia@roche.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.28.0"
requests = "^2.31.0"
stability-sdk = "^0.8.4"
streamlit-image-comparison = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
